ArkScript.bnf
<identifier>     = [a-zA-Z_][a-zA-Z0-9_]*
<literal-int>    = [0-9]+
<literal-float>  = [0-9]+ "." [0-9]+
<literal-char>   = "'" [^\'"'] "'"
<literal-string> = '"' [^'"'\\]* '"'
<literal-bool>   = "true" | "false"

<type-native>    = "i8" | "i16" | "i32" | "i64" | "f32" | "f64" | "str" | "bool"
<type-void>      = "void"

<program>          = <module-decl> <module-statement>*
<module-decl>      = "module" <identifier> ( "::" <identifier> )* ";"
<module-statement> = <const-decl> | <func-decl>

<statement>      = <statement> = <var-decl> | <assign-stmt> | <call-stmt> | <return-stmt>
<assign-stmt>    = <identifier> "=" <expression> ";"
<call-stmt>      = <func-call> ";"

<var-decl>       = "var" <identifier> ":" <type-native> "=" <expression> ";"
<const-decl>     = [ "pub" ] "const" <identifier> ":" <type-native> "=" <expression> ";"

<func-decl>      = [ "pub" ] "fun" <identifier> "(" [ <parameter-list> ] ")" "->" ( <type-native> | <type-void> ) ":" <statement>* "end"
<func-call>      = <identifier> "(" [ <arg-list> ] ")"
<arg-list>       = <expression> ( "," <expression> )*

<parameter>      = <identifier> ":" <type-native>
<parameter-list> = <parameter> ( "," <parameter> )*

<return-stmt>    = "return" [ <expression> ] ";"

<expression>     = <term> ( ( "+" | "-" ) <term> )*

<term>           = <primary> ( ( "*" | "/" ) <primary> )*

<primary>        = <func-call> 
                 | <identifier> 
                 | <literal-int> 
                 | <literal-float>
                 | <literal-string> 
                 | <literal-bool>
                 | "(" <expression> ")"
